fix scrollbar color on dark theme | oh | #774

--- a/packages/components/src/components/form/select-wrapper/select-wrapper.scss
+++ b/packages/components/src/components/form/select-wrapper/select-wrapper.scss
@@ -346,7 +346,13 @@
 
     &::-webkit-scrollbar-thumb {
       border-radius: 4px;
-      background-color: rgba(0, 0, 0, 0.4);
+
+      #{$bem-block}--theme-light & {
+        background-color: rgba(0, 0, 0, 0.4);
+      }
+      #{$bem-block}--theme-dark & {
+        background-color: rgba(255, 255, 255, 0.4);
+      }
     }
 
     &::after {
